--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css">
+    <script type = "module" src = "main.js"></script>
     <title>Psychology test</title>
   </head>
   <body>
