--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css">
-    <script type = "module" src = "main.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <script type="module" src="main.js"></script>
+    <link rel="icon" href="favicon.ico?v=1" />
     <title>Psychology test</title>
   </head>
   <body>
