--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
     <script type="module" src="main.js"></script>
-    <link rel="icon" href="favicon.ico?v=1" />
+    <link rel="icon" href="favicon.ico" />
     <title>Psychology test</title>
   </head>
   <body>
